[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
bitflags = "2.6.0"
crc = "3.2.1"
num_enum = "0.7.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snap = "1.1.1"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.66"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
